--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Your First and Last Name]</h1>
-            <h1>Preferred Name: [Your Preferred Name]</h1>
+            <h1>yama shiva lakshmi renu</h1>
+            <h1>Preferred Name: Renu</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Your Years at Lewis]</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
-        </section>
+			<h2>Year at Lewis: 1 year</h2>
+			<h2>Lewis major/minor/concentrations: [computer science/software engineering]</h2>
+			<h2>Reasons for pursuing this degree: [To enhance coding skills]</h2>
+        </section>/
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <p>[to knowing about project architecture and sprint plannings and learning about agile methodologies]</p>
         </section>
 
 		<section class="job">
