--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>yama shiva lakshmi renu</h1>
+            <h1>Shiva Lakshmi Renu Yama</h1>
             <h1>Preferred Name: Renu</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: 1 year</h2>
+			<h2>Year at Lewis: 2 year</h2>
 			<h2>Lewis major/minor/concentrations: [computer science/software engineering]</h2>
 			<h2>Reasons for pursuing this degree: [To enhance coding skills]</h2>
         </section>/
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[to knowing about project architecture and sprint plannings and learning about agile methodologies]</p>
+            <p>[To know about project architecture and sprint plannings and learning about agile methodologies.]</p>
         </section>
 
 		<section class="job">
             <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+			<p>[I dont have work expreince yet,but i am intrested in learning new skills and grow in the field.I have learned a few technologies like python full stack and Django.]</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>[I enjoy learning new things and dancing.]</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>[A fun fact about me i am always a laughing girl and love travelling to new places.]</p>
         </section>
     </div>
 </body>
