--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
 
         <section class="lewis">
 			<h2>Year at Lewis: 2 year</h2>
-			<h2>Lewis major/minor/concentrations: [computer science/software engineering]</h2>
-			<h2>Reasons for pursuing this degree: [To enhance coding skills]</h2>
+			<h2>Lewis major/minor/concentrations: computer science/software engineering</h2>
+			<h2>Reasons for pursuing this degree: To enhance coding skills</h2>
         </section>/
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[To know about project architecture and sprint plannings and learning about agile methodologies.]</p>
+            <p>To know about project architecture and sprint plannings and learning about agile methodologies.</p>
         </section>
 
 		<section class="job">
             <p>Current/Recent Job</p>
-			<p>[I dont have work expreince yet,but i am intrested in learning new skills and grow in the field.I have learned a few technologies like python full stack and Django.]</p>
+			<p>I dont have work expreince yet,but i am intrested in learning new skills and grow in the field.I have learned a few technologies like python full stack and Django.</p>
         </section>		
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[I enjoy learning new things and dancing.]</p>
+            <p>I enjoy learning new things and dancing.</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about me i am always a laughing girl and love travelling to new places.]</p>
+            <p>A fun fact about me i am always a laughing girl and love travelling to new places.</p>
         </section>
     </div>
 </body>
