--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>About Me</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shiva Lakshmi Renu Yama’s Introductions Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             line-height: 1.6;
+            color: #222;
         }
         .container {
             width: 80%;
@@ -17,48 +20,69 @@
             background: #333;
             color: #fff;
             padding: 20px;
+            text-align: center;
         }
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job {
+        .section {
             background: #e7e7e7;
             padding: 15px;
             margin-bottom: 10px;
+            border-radius: 8px;
+        }
+        ul {
+            list-style-type: square;
+        }
+        img {
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+        }
+        a {
+            color: #0077cc;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>Shiva Lakshmi Renu Yama</h1>
-            <h1>Preferred Name: Renu</h1>
+            <img src="me-800-by-800.jpg" alt="Photo of Shiva Lakshmi Renu Yama" width="300" height="300">
+            <h1>Shiva Lakshmi Renu Yama’s Introductions Website</h1>
+            <p>Email: <a href="mailto:yourlewisemail@lewisu.edu">yourlewisemail@lewisu.edu</a></p>
+            <p>Discord: ShivaLakshmiRenuYama#1234</p>
         </header>
 
-        <section class="lewis">
-			<h2>Year at Lewis: 2 year</h2>
-			<h2>Lewis major/minor/concentrations: computer science/software engineering</h2>
-			<h2>Reasons for pursuing this degree: To enhance coding skills</h2>
-        </section>/
-
-		<section class="course">
-            <h2>Reasons for Taking This Course</h2>
-            <p>To know about project architecture and sprint plannings and learning about agile methodologies.</p>
+        <section class="section">
+            <h2>Introduction</h2>
+            <p>Hello! My name is <strong>Shiva Lakshmi Renu Yama</strong>, but I prefer to go by <strong>Renu</strong>. I’m currently in my second year at Lewis University pursuing a major in <strong>Computer Science</strong> with a concentration in <strong>Software Engineering</strong>. I chose this path because I’m passionate about technology and love developing creative software solutions. My family has always supported my curiosity and drive to learn new skills.</p>
         </section>
 
-		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>I dont have work expreince yet,but i am intrested in learning new skills and grow in the field.I have learned a few technologies like python full stack and Django.</p>
-        </section>		
-
-        <section class="hobbies">
-            <h2>Hobbies and Special Interests</h2>
-            <p>I enjoy learning new things and dancing.</p>
+        <section class="section">
+            <h2>What I Hope to Learn in this Course</h2>
+            <ul>
+                <li>Understanding project architecture and design patterns</li>
+                <li>Improving sprint planning and teamwork skills</li>
+                <li>Applying agile methodologies to real-world projects</li>
+                <li>Enhancing front-end and back-end integration skills</li>
+            </ul>
         </section>
 
-        <section class="fun-fact">
+        <section class="section">
+            <h2>My Favorite Hobby / Activity</h2>
+            <ul>
+                <li>Dancing — it helps me express creativity and stay active.</li>
+                <li>Learning new technologies and coding small projects.</li>
+            </ul>
+            <p>Here’s an article about dance I enjoy reading: 
+                <a href="https://www.dance-teacher.com/" target="_blank">Dance Teacher Magazine</a>.
+            </p>
+        </section>
+
+        <section class="section">
             <h2>Fun Fact</h2>
-            <p>A fun fact about me i am always a laughing girl and love travelling to new places.</p>
+            <p>A fun fact about me is that I’m always smiling and love traveling to new places. Exploring cultures and food from different regions brings me joy and inspiration.</p>
         </section>
     </div>
 </body>
