--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
 <body>
     <div class="container">
         <header class="main-info">
+            <!-- Main 800x800 image -->
             <img src="me-800-by-800.jpg" alt="Photo of Shiva Lakshmi Renu Yama" width="300" height="300">
+
+            <!-- Thumbnail 300x300 image -->
+            <img src="me-300-by-300.jpg" alt="Thumbnail of Shiva Lakshmi Renu Yama" width="150" height="150">
+
             <h1>Shiva Lakshmi Renu Yama’s Introductions Website</h1>
-            <p>Email: <a href="mailto:yourlewisemail@lewisu.edu">yourlewisemail@lewisu.edu</a></p>
-            <p>Discord: ShivaLakshmiRenuYama#1234</p>
+            <p>Email: <a href="mailto:ShivaLakshmiRenuYa@lewisu.edu">ShivaLakshmiRenuYa@lewisu.edu</a></p>
+            <p>Discord: shivalakshmirenu</p>
         </header>
 
         <section class="section">
